--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <p>I am currently undertaking the Devmountain bootcamp to upgrade my skills.</p>
 
             <h2>Skills</h2>
-            <p>JS | Python | React | Node | Express</p>
+            <p>JS | Python | React | Node | Express | JAMSTACK</p>
             <h2>Projects</h2>
-            <a href="https://github.com/adnjoo/RedBorderChromeExtension">RedBorderChromeExtension</a>
-            <a href="https://adnjoo.github.io/blackjack/">Blackjack</a>
+            <a href="https://github.com/adnjoo/RedBorderChromeExtension">RedBorderChromeExtension (JS/CSS/HTML)</a>
+            <a href="https://adnjoo.github.io/blackjack/">Blackjack (JS/CSS/HTML)</a>
+            <a href="https://adnjoo.github.io/personal-blog/">Personal blog (JAMSTACK)</a>
             <h2>Contact</h2>
             <p>adnjoo@protonmail.com</p>
         </div>
