--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
             <p>I am currently undertaking the Devmountain bootcamp to upgrade my skills.</p>
 
             <h2>Skills</h2>
-            <p>JS | Python | React | Node | Express | JAMSTACK</p>
+            <p id='skills'>
+                <span><i class="fab fa-js-square"></i> <a>JavaScript</a> |</span>
+                <span><i class="fab fa-python"></i> <a>Python</a> |</span>
+                <span><i class="fab fa-react"></i> <a>React</a> |</span><br>
+                <span><i class="fab fa-node"></i> <a>Node</a> |</span>
+                <span><i class="fab fa-html5"></i> <a>HTML</a> |</span>
+                <span><i class="fab fa-css3"></i> <a>CSS</a></span>
+
+            </p>
             <h2>Projects</h2>
-            <a href="https://github.com/adnjoo/RedBorderChromeExtension">RedBorderChromeExtension (JS/CSS/HTML)</a>
-            <a href="https://adnjoo.github.io/blackjack/">Blackjack (JS/CSS/HTML)</a>
-            <a href="https://adnjoo.github.io/personal-blog/">Personal blog (JAMSTACK)</a>
+            <a class='project' href="https://github.com/adnjoo/RedBorderChromeExtension">RedBorderChromeExtension (JS/CSS/HTML)</a><br>
+            <a class='project' href="https://adnjoo.github.io/blackjack/">Blackjack (JS/CSS/HTML)</a><br>
+            <a class='project' href="https://adnjoo.github.io/personal-blog/">Personal blog (JAMstack)</a>
             <h2>Contact</h2>
             <p>adnjoo@protonmail.com</p>
         </div>
