--- a/index.html
+++ b/index.html
@@ -1,64 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Andrew Njoo</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="grid-2">
-        <div class="section-1">
-            <img src='./andrew.svg'>
-            <br>
-            <i class="fas fa-code fa-2x white"></i>
-            <h2>Andrew Njoo</h2>
-            <p>Redwood City, USA.</p>
-            <a href="https://twitter.com/andrewnjoo"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/andrew-njoo-46238a160/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/adnjoo"><i class="fab fa-github"></i></a>
-        </div>
-        <div class="section-2">
-            <h2>About</h2>
-            <p>Hello my name is drew.</p>
-            <h2>Experience</h2>
-            <p>I am currently undertaking the Devmountain bootcamp to upgrade my skills.</p>
+      <div class="section-1">
+        <img src="./andrew.svg" />
+        <br />
+        <div class="codething"><i class="fas fa-code"></i></div>
+        <h2>Andrew Njoo</h2>
+        <p>Redwood City, USA.</p>
+        <a href="https://twitter.com/andrewnjoo"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/andrew-njoo-46238a160/"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/adnjoo"><i class="fab fa-github"></i></a>
+      </div>
+      <div class="section-2">
+        <h2>About</h2>
+        <p>Hello my name is drew.</p>
+        <h2>Experience</h2>
+        <p id='experience'>
+          I am currently undertaking the Devmountain bootcamp to upgrade my
+          skills.
+        </p>
 
-            <h2>Skills</h2>
-            <p id='skills'>
-                <span><i class="fab fa-js-square"></i> <a>JavaScript</a> |</span>
-                <span><i class="fab fa-python"></i> <a>Python</a> |</span>
-                <span><i class="fab fa-react"></i> <a>React</a> |</span><br>
-                <span><i class="fab fa-node"></i> <a>Node</a> |</span>
-                <span><i class="fab fa-html5"></i> <a>HTML</a> |</span>
-                <span><i class="fab fa-css3"></i> <a>CSS</a></span>
-
-            </p>
-            <h2>Projects</h2>
-            <a class='project' href="https://github.com/adnjoo/RedBorderChromeExtension">RedBorderChromeExtension (JS/CSS/HTML)</a><br>
-            <a class='project' href="https://adnjoo.github.io/blackjack/">Blackjack (JS/CSS/HTML)</a><br>
-            <a class='project' href="https://adnjoo.github.io/personal-blog/">Personal blog (JAMstack)</a>
-            <h2>Contact</h2>
-            <p>adnjoo@protonmail.com</p>
-        </div>
+        <h2>Skills</h2>
+        <p id="skills">
+          <span><i class="fab fa-js-square"></i> <a>JavaScript</a></span
+          ><br />
+          <span><i class="fab fa-python"></i> <a>Python</a></span
+          ><br />
+          <span><i class="fab fa-react"></i> <a>React</a></span
+          ><br />
+          <span><i class="fab fa-node"></i> <a>Node</a></span
+          ><br />
+          <span><i class="fab fa-html5"></i> <a>HTML</a></span
+          ><br />
+          <span><i class="fab fa-css3"></i> <a>CSS</a></span>
+        </p>
+        <h2>Projects</h2>
+        <a
+          class="project"
+          href="https://github.com/adnjoo/RedBorderChromeExtension"
+          >RedBorderChromeExt. (JS/CSS/HTML)</a
+        ><br />
+        <a class="project" href="https://adnjoo.github.io/blackjack/"
+          >Blackjack (JS/CSS/HTML)</a
+        ><br />
+        <a class="project" href="https://adnjoo.github.io/personal-blog/"
+          >Personal blog (JAMstack)</a
+        >
+        <h2>Contact</h2>
+        <p>adnjoo@protonmail.com</p>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-<script>
-const options = {
-  time: '0.5s', // default: '0.3s'
-  mixColor: '#fff', // default: '#fff'
-  backgroundColor: '#FFBFA0',  // default: '#fff'
-  buttonColorDark: '#100f2c',  // default: '#100f2c'
-  buttonColorLight: '#fff', // default: '#fff'
-  saveInCookies: false, // default: true,
-  label: '🌓', // default: ''
-  autoMatchOsTheme: true // default: true
-}
-  function addDarkmodeWidget() {
-    new Darkmode(options).showWidget();
-  }
-  window.addEventListener('load', addDarkmodeWidget);
-</script>
-</body>
+    <script>
+      const options = {
+        time: "0.5s", // default: '0.3s'
+        mixColor: "#fff", // default: '#fff'
+        backgroundColor: "#FFBFA0", // default: '#fff'
+        buttonColorDark: "#100f2c", // default: '#100f2c'
+        buttonColorLight: "#fff", // default: '#fff'
+        saveInCookies: false, // default: true,
+        label: "🌓", // default: ''
+        autoMatchOsTheme: true, // default: true
+      };
+      function addDarkmodeWidget() {
+        new Darkmode(options).showWidget();
+      }
+      window.addEventListener("load", addDarkmodeWidget);
+    </script>
+  </body>
 </html>
