--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img src="./andrew.svg" />
+        <img src="./pic.jpeg" />
         <br />
         <div class="codething"><i class="fas fa-code"></i></div>
         <h2>Andrew Njoo</h2>
