--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           >Personal blog (JAMstack)</a
         >
         <h2>Contact</h2>
-        <p>adnjoo@protonmail.com</p>
+        <p id='footer'>adnjoo@protonmail.com</p>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
