--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           href="https://github.com/adnjoo/RedBorderChromeExtension"
           >RedBorderChromeExt. (JS/CSS/HTML)</a
         ><br />
-        <a class="project" href="https://adnjoo.github.io/blackjack/"
+        <a class="project" href="https://adnjoo.github.io/rewrite/"
           >Blackjack (JS/CSS/HTML)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/personal-blog/"
