--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <a class="project" href="https://adnjoo.github.io/rewrite/"
           >Blackjack (JS/CSS/HTML)</a
         ><br />
+        <a class="project" href="https://adnjoo.github.io/pokevolution/"
+          >Pokevolution (working with Axios)</a
+        ><br />
         <a class="project" href="https://adnjoo.github.io/personal-blog/"
           >Personal blog (JAMstack)</a
         >
