--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -58,7 +58,7 @@
         <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/"
           >Blackjack (JS/CSS/HTML)</a
         ><br />
-        <a class="project" href="https://adnjoo.github.io/pokevolution/"
+        <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/2021/pokevolution-2021/index.html"
           >Pokevolution (working with Axios)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/personal-blog/"
