--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -61,7 +61,7 @@
         <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/2021/pokevolution-2021/index.html"
           >Pokevolution (working with Axios)</a
         ><br />
-        <a class="project" href="https://adnjoo.github.io/personal-blog/"
+        <a class="project" href="https://adnjoo.github.io/"
           >Personal blog (JAMstack)</a
         >
         <h2>Contact</h2>
