--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -13,7 +13,8 @@
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img src="./pic.jpeg" />
+        <img src="./andrew.svg" />
+        <!-- <img src="./pic.jpeg" /> -->
         <br />
         <div class="codething"><i class="fas fa-code"></i></div>
         <h2>Andrew Njoo</h2>
