--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img src="./andrew.svg" />
+        <img id='profile' src="./andrew.svg" />
         <!-- <img src="./pic.jpeg" /> -->
         <br />
         <div class="codething"><i class="fas fa-code"></i></div>
@@ -69,6 +69,8 @@
         <p id='footer'>adnjoo@protonmail.com</p>
       </div>
     </div>
+    <script src='./index.js'></script>
+    <!-- dark mode -->
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script>
       const options = {
