--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -19,7 +19,7 @@
         <div class="codething"><i class="fas fa-code"></i></div>
         <h2>Andrew Njoo</h2>
         <p>Redwood City, USA.</p>
-        <a href="https://twitter.com/andrewnjoo"
+        <a href="https://twitter.com/adnjoo"
           ><i class="fab fa-twitter"></i
         ></a>
         <a href="https://www.linkedin.com/in/andrew-njoo-46238a160/"
@@ -32,7 +32,7 @@
         <p>Hello my name is drew.</p>
         <h2>Experience</h2>
         <p id='experience'>
-          I am currently undertaking the Devmountain bootcamp to upgrade my
+          I am currently undertaking the DevMtn bootcamp to upgrade my
           skills.
         </p>
 
@@ -53,14 +53,14 @@
         <h2>Projects</h2>
         <a
           class="project"
-          href="https://github.com/adnjoo/RedBorderChromeExtension"
-          >RedBorderChromeExt. (JS/CSS/HTML)</a
+          href="https://github.com/adnjoo/my-movie-app"
+          >Movie App (PERN)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/"
-          >Blackjack (JS/CSS/HTML)</a
+          >Blackjack (HTML, CSS, JS)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/2021/pokevolution-06-2021/index.html"
-          >Pokevolution (working with Axios)</a
+          >Pokevolution (APIs)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/"
           >Personal blog (JAMstack)</a
