--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -8,6 +8,7 @@
       href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     />
     <link rel="stylesheet" href="style.css" />
+
     <title>Andrew Njoo</title>
   </head>
   <body>
@@ -29,7 +30,7 @@
       </div>
       <div class="section-2">
         <h2>About</h2>
-        <p>Hello my name is drew.</p>
+        <span id='typed'></span>
         <h2>Experience</h2>
         <p id='experience'>
           I am currently undertaking the DevMtn bootcamp to upgrade my
@@ -69,7 +70,9 @@
         <p id='footer'>adnjoo@protonmail.com</p>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src='./index.js'></script>
+
     <!-- dark mode -->
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script>
