--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -23,7 +23,7 @@
         <a href="https://twitter.com/adnjoo"
           ><i class="fab fa-twitter"></i
         ></a>
-        <a href="https://www.linkedin.com/in/andrew-njoo-46238a160/"
+        <a href="https://www.linkedin.com/in/adnjoo/"
           ><i class="fab fa-linkedin"></i
         ></a>
         <a href="https://github.com/adnjoo"><i class="fab fa-github"></i></a>
