--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -54,7 +54,7 @@
         <h2>Projects</h2>
         <a
           class="project"
-          href="https://github.com/adnjoo/my-movie-app"
+          href="https://github.com/adnjoo/movie-app-frontend"
           >Movie App (PERN)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/"
