--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -79,7 +79,7 @@
       const options = {
         time: "0.5s", // default: '0.3s'
         mixColor: "#fff", // default: '#fff'
-        backgroundColor: "#FFBFA0", // default: '#fff'
+        backgroundColor: "#D7F2BA", // default: '#fff'
         buttonColorDark: "#100f2c", // default: '#100f2c'
         buttonColorLight: "#fff", // default: '#fff'
         saveInCookies: false, // default: true,
