--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -9,23 +9,22 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <!-- materialize -->
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.0.0-insiders.4a070ac/tailwind.min.css" />
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- materialize -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 
     <title>Andrew Njoo</title>
   </head>
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img id='profile' src="./andrew.svg" />
+        <img id='profile' class='border-r-4' src="./andrew.svg" />
         <!-- <img src="./pic.jpeg" /> -->
         <br />
         <div class="codething"><i class="fas fa-code"></i></div>
-        <h2>Andrew Njoo</h2>
+        <h2 class=''>Andrew Njoo</h2>
         <p>Redwood City, USA.</p>
         <a href="https://twitter.com/adnjoo"
           ><i class="fab fa-twitter"></i
@@ -74,7 +73,7 @@
           >Personal blog (JAMstack)</a
         >
         <h2>Contact</h2>
-        <p id='footer'>adnjoo@protonmail.com</p>
+        <p class='font-semibold'id='footer'>adnjoo@protonmail.com</p>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
