--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -20,12 +20,12 @@
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img id='profile' class='border-r-4' src="./andrew.svg" />
-        <!-- <img src="./pic.jpeg" /> -->
+        <img id='profile' class='border-r-4 transform skew-x-1' src="./andrew.svg" />
         <br />
-        <div class="codething"><i class="fas fa-code"></i></div>
+        <div class="codething animate-bounce"><i class="fas fa-code"></i></div>
         <h2 class=''>Andrew Njoo</h2>
         <p>Redwood City, USA.</p>
+        <span>
         <a href="https://twitter.com/adnjoo"
           ><i class="fab fa-twitter"></i
         ></a>
@@ -33,6 +33,7 @@
           ><i class="fab fa-linkedin"></i
         ></a>
         <a href="https://github.com/adnjoo"><i class="fab fa-github"></i></a>
+      </span>
       </div>
       <div class="section-2">
         <h2>About</h2>
