--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img id='profile' class='border-r-4 transform skew-x-1' src="./andrew.svg" />
+        <img id='profile' class='border-r-4' src="./andrew.svg" />
         <br />
         <div class="codething animate-bounce"><i class="fas fa-code"></i></div>
         <h2 class=''>Andrew Njoo</h2>
@@ -62,13 +62,13 @@
         <a
           class="project"
           href="https://adnjoo.github.io/movie-app/"
-          >Movie App (PERN)</a
+          >Movie App (full stack app)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/"
           >Blackjack (HTML, CSS, JS)</a
         ><br />
-        <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/2021/pokevolution-06-2021/index.html"
-          >Pokevolution (APIs)</a
+        <a class="project" href="https://adnjoo.github.io/weather-app/"
+          >Weather App (React)</a
         ><br />
         <a class="project" href="https://adnjoo.github.io/"
           >Personal blog (JAMstack)</a
