--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -64,14 +64,14 @@
           href="https://adnjoo.github.io/movie-app/"
           >Movie App (full stack app)</a
         ><br />
+        <a class="project" href="https://adnjoo.github.io/weather-app/"
+        >Weather App (React)</a
+        ><br />
         <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/"
           >Blackjack (HTML, CSS, JS)</a
         ><br />
-        <a class="project" href="https://adnjoo.github.io/weather-app/"
-          >Weather App (React)</a
-        ><br />
-        <a class="project" href="https://adnjoo.github.io/"
-          >Personal blog (JAMstack)</a
+        <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/"
+          >Other projects</a
         >
         <h2>Contact</h2>
         <p class='font-semibold'id='footer'>adnjoo@protonmail.com</p>
