--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="grid-2">
       <div class="section-1">
-        <img id='profile' class='border-r-4' src="./andrew.svg" />
+        <img id='profile' class='border-r-4' src="./pic.jpeg" />
         <br />
         <div class="codething animate-bounce"><i class="fas fa-code"></i></div>
         <h2 class=''>Andrew Njoo</h2>
