--- a/portfolio-website-2021-v1/index.html
+++ b/portfolio-website-2021-v1/index.html
@@ -1,103 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-    />
-    <link rel="stylesheet" href="style.css" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.0.0-insiders.4a070ac/tailwind.min.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
+  <link rel="stylesheet" href="style.css" />
 
-    <!-- materialize -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.0.0-insiders.4a070ac/tailwind.min.css" />
 
-    <title>Andrew Njoo</title>
-  </head>
-  <body>
-    <div class="grid-2">
-      <div class="section-1">
-        <img id='profile' class='border-r-4' src="./pic.jpeg" />
-        <br />
-        <div class="codething animate-bounce"><i class="fas fa-code"></i></div>
-        <h2 class=''>Andrew Njoo</h2>
-        <p>Redwood City, USA.</p>
-        <span>
-        <a href="https://twitter.com/adnjoo"
-          ><i class="fab fa-twitter"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/adnjoo/"
-          ><i class="fab fa-linkedin"></i
-        ></a>
+  <title>Andrew Njoo</title>
+</head>
+
+<body>
+  <div class="grid-2">
+    <div class="section-1">
+      <img id='profile' class='border-r-4' src="./pic.jpeg" />
+      <br />
+      <div class="codething animate-bounce"><i class="fas fa-code"></i></div>
+      <h2 class=''>Andrew Njoo</h2>
+      <p>Redwood City, USA.</p>
+      <span>
+        <a href="https://twitter.com/adnjoo"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/adnjoo/"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/adnjoo"><i class="fab fa-github"></i></a>
       </span>
-      </div>
-      <div class="section-2">
-        <h2>About</h2>
-        <span id='typed'></span>
-        <h2>Experience</h2>
-        <p id='experience'>
-          I am currently undertaking the DevMtn bootcamp to upgrade my
-          skills.
-        </p>
-
-        <h2>Skills</h2>
-        <p id="skills">
-          <span><i class="fab fa-js-square"></i> <a>JavaScript</a></span
-          ><br />
-          <span><i class="fab fa-python"></i> <a>Python</a></span
-          ><br />
-          <span><i class="fab fa-react"></i> <a>React</a></span
-          ><br />
-          <span><i class="fab fa-node"></i> <a>Node</a></span
-          ><br />
-          <span><i class="fab fa-html5"></i> <a>HTML</a></span
-          ><br />
-          <span><i class="fab fa-css3"></i> <a>CSS</a></span>
-        </p>
-        <h2>Projects</h2>
-        <a
-          class="project"
-          href="https://adnjoo.github.io/movie-app/"
-          >Movie App (full stack app)</a
-        ><br />
-        <a class="project" href="https://adnjoo.github.io/weather-app/"
-        >Weather App (React)</a
-        ><br />
-        <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/"
-          >Blackjack (HTML, CSS, JS)</a
-        ><br />
-        <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/"
-          >Other projects</a
-        >
-        <h2>Contact</h2>
-        <p class='font-semibold'id='footer'>adnjoo@protonmail.com</p>
-      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src='./index.js'></script>
+    <div class="section-2">
+      <h2>About</h2>
+      <span id='typed'></span>
+      <h2>Experience</h2>
+      <p id='experience'>
+        I am currently undertaking the DevMtn bootcamp to upgrade my
+        skills.
+      </p>
 
-    <!-- dark mode -->
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script>
+      <h2>Skills</h2>
+      <p id="skills">
+        <span><i class="fab fa-js-square"></i> <a>JavaScript</a></span><br />
+        <span><i class="fab fa-python"></i> <a>Python</a></span><br />
+        <span><i class="fab fa-react"></i> <a>React</a></span><br />
+        <span><i class="fab fa-node"></i> <a>Node</a></span><br />
+        <span><i class="fab fa-html5"></i> <a>HTML</a></span><br />
+        <span><i class="fab fa-css3"></i> <a>CSS</a></span>
+      </p>
+      <h2>Projects</h2>
+      <a class="project" href="https://adnjoo.github.io/movie-app/">Movie App (full stack app)
+        <br>
+        <img class='w-28' src='https://raw.githubusercontent.com/adnjoo/movie-app/main/v0.0.0.3.png'>
+      </a><br />
+      <a class="project" href="https://adnjoo.github.io/weather-app/">Weather App (React)
+        <br>
+        <img class='w-28' src='https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png'>
+      </a><br />
+      <a class="project" href="https://adnjoo.github.io/blackjack/blackjack-v2/">Blackjack (HTML, CSS, JS)
+        <br>
+        <img class='w-28' src='https://raw.githubusercontent.com/adnjoo/blackjack/main/preview.png'>
+      </a><br />
+      <a class="project" href="https://adnjoo.github.io/andrew-archive-2021/">Other projects
+        <br>
+        <img class='w-28' src='https://raw.githubusercontent.com/adnjoo/andrew-archive-2021/main/scrn.png'>
+      </a>
+      <br><br>
+      <h2>Contact</h2>
+      <p class='font-semibold' id='footer'>adnjoo@protonmail.com</p>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src='./index.js'></script>
 
-      const options = {
-        time: "0.5s", // default: '0.3s'
-        mixColor: "#fff", // default: '#fff'
-        backgroundColor: "#D7F2BA", // default: '#fff'
-        buttonColorDark: "#100f2c", // default: '#100f2c'
-        buttonColorLight: "#fff", // default: '#fff'
-        saveInCookies: false, // default: true,
-        label: "🌓", // default: ''
-        autoMatchOsTheme: true, // default: true
-      };
-      function addDarkmodeWidget() {
-        new Darkmode(options).showWidget();
-      }
-      window.addEventListener("load", addDarkmodeWidget);
-    </script>
-  </body>
+  <!-- dark mode -->
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script>
+
+    const options = {
+      time: "0.5s", // default: '0.3s'
+      mixColor: "#fff", // default: '#fff'
+      backgroundColor: "#D7F2BA", // default: '#fff'
+      buttonColorDark: "#100f2c", // default: '#100f2c'
+      buttonColorLight: "#fff", // default: '#fff'
+      saveInCookies: false, // default: true,
+      label: "🌓", // default: ''
+      autoMatchOsTheme: true, // default: true
+    };
+    function addDarkmodeWidget() {
+      new Darkmode(options).showWidget();
+    }
+    window.addEventListener("load", addDarkmodeWidget);
+  </script>
+</body>
+
 </html>
