--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <html>
     <head>
-        <!-- <meta http-equiv='refresh' content='0; URL=./portfolio-website-2021-v1/index.html'> -->
-        <meta http-equiv='refresh' content='0; URL=./index2.html'>
+        <meta http-equiv='refresh' content='0; URL=./portfolio-website-2021-v1/index.html'>
+        <!-- <meta http-equiv='refresh' content='0; URL=./index2.html'> -->
     </head>
 </html>
