--- a/index2.html
+++ b/index2.html
@@ -152,7 +152,7 @@
           <a href='https://adnjoo.github.io/ExpenseTracker'>
             ExpenseTracker (Ruby on Rails)
             <br>
-            <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/ExpenseTracker/main/scrn3.png'>
+            <img class='projectimg' src='https://expensetracker2.herokuapp.com/'>
           </a>
         </p>
       <div class='child' id='bottomarrow'>
