--- a/index2.html
+++ b/index2.html
@@ -149,10 +149,10 @@
             <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png'>
           </a>
           <br><br>
-          <a href='https://adnjoo.github.io/ExpenseTracker'>
+          <a href='https://expensetracker2.herokuapp.com/'>
             ExpenseTracker (Ruby on Rails)
             <br>
-            <img class='projectimg' src='https://expensetracker2.herokuapp.com/'>
+            <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/ExpenseTracker/main/scrn3.png'>
           </a>
         </p>
       <div class='child' id='bottomarrow'>
