--- a/index2.html
+++ b/index2.html
@@ -149,20 +149,21 @@
             <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png'>
           </a>
           <br><br>
-          <a href='https://expensetracker2.herokuapp.com/'>
+          <a href='https://expensetracker2.herokuapp.com/' >
             ExpenseTracker (Ruby on Rails)
             <br>
             <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/ExpenseTracker/main/scrn3.png'>
           </a>
+          <br><br>
         </p>
-      <div class='child' id='bottomarrow'>
-        <a href='#about'>
+      <div class='child lastchild' id='bottomarrowlast' >
+        <a href='#about' >
           <i class="fas fa-arrow-circle-up fa-2x"></i>
         </a>
       </div>
       </div>
     </section>
-    <footer>
+    <footer >
       © Andrew Njoo (2021)
     </footer>
   </div>
