--- a/index2.html
+++ b/index2.html
@@ -82,6 +82,7 @@
         <br>
         <table class='table table-borderless mytable'>
           <tbody>
+            <!-- row 1 -->
             <tr>
               <td>
                 <i class="fab fa-react fa-3x" style='color:5ed2f3'></i>
@@ -99,6 +100,7 @@
                   Python
                 </td>
               </tr>
+              <!-- row 2 -->
               <tr>
                 <td>
                   <i class="fab fa-html5 fa-3x" style='color:e96228'></i>
@@ -116,11 +118,22 @@
                   Git
                 </td>
               </tr>
+              <!-- row 3 -->
               <tr>
                 <td>
                   <i class="fab fa-node-js fa-3x" style='color:7fbc02;'></i>
                   <br>
                   Node
+                </td>
+                <td>
+                  <i class="fas fa-gem fa-3x" style='color:#c60000;'></i>
+                  <br>
+                  Ruby
+                </td>
+                <td>
+                  <i class="fas fa-road fa-3x" style='color:#8e0d15;'></i>
+                  <br>
+                  Rails
                 </td>
               </tr>
             </tbody>
