--- a/index2.html
+++ b/index2.html
@@ -24,13 +24,13 @@
         <a href="#skills">Skills</a><br>
         <a href="#projects">Projects</a><br>
         <br><br>
-        <a href='https://twitter.com/adnjoo'>
+        <a href='https://twitter.com/adnjoo' target="_blank">
           <i class="fab fa-twitter fa-lg"></i>
         </a>
-        <a href='https://github.com/adnjoo'>
+        <a href='https://github.com/adnjoo' target="_blank">
           <i class="fab fa-github fa-lg"></i>
         </a>
-        <a href='https://www.linkedin.com/in/adnjoo'>
+        <a href='https://www.linkedin.com/in/adnjoo' target="_blank">
           <i class="fab fa-linkedin fa-lg"></i>
         </a>
       </nav>
@@ -150,19 +150,19 @@
         <h4 class=''>Projects:</h4>
         <br>
         <p>
-          <a href='https://adnjoo.github.io/movie-app/'>
+          <a href='https://adnjoo.github.io/movie-app/' target="_blank">
             Movie App (full stack app)
             <br>
             <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/movie-app/main/v0.0.0.3.png'>
           </a>
           <br><br>
-          <a href='https://adnjoo.github.io/weather-app/'>
+          <a href='https://adnjoo.github.io/weather-app/' target="_blank">
             Weather App (React)
             <br>
             <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png'>
           </a>
           <br><br>
-          <a href='https://expensetracker2.herokuapp.com/' >
+          <a href='https://expensetracker2.herokuapp.com/' target="_blank">
             ExpenseTracker (Ruby on Rails)
             <br>
             <img class='projectimg' src='https://raw.githubusercontent.com/adnjoo/ExpenseTracker/main/scrn3.png'>
