--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
   <!-- Custom styles -->
   <link rel='stylesheet' href='styles.css'>
   <!-- Fontawesome -->
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" >
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
 </head>
 
@@ -45,21 +45,21 @@
     <!-- Intro -->
     <section id='about'>
       <div class='parent' id='mycontainer'>
-          <h2>Andrew Njoo</h2>
-          <div id='typedcontainer'>
-            <h4 class='element'></h4>
-          </div>
-          <br>
-          <img src='https://raw.githubusercontent.com/adnjoo/portfolio-website/main/portfolio-website-2021-v1/pic.jpeg'
-          class='profilepic'
-          >
-          <div class='child' id='bottomarrow'>
-            <a href='#experience'>
-              <i class="fas fa-arrow-circle-down fa-2x"></i>
-            </a>
-          </div>
+        <h2>Andrew Njoo</h2>
+        <div id='typedcontainer'>
+          <h4 class='element'></h4>
+        </div>
+        <br>
+        <img src='https://raw.githubusercontent.com/adnjoo/portfolio-website/main/portfolio-website-2021-v1/pic.jpeg'
+          class='profilepic'>
+        <div class='child' id='bottomarrow'>
+          <a href='#experience'>
+            <i class="fas fa-arrow-circle-down fa-2x"></i>
+          </a>
+        </div>
       </div>
     </section>
+    <!-- Experience -->
     <section id='experience'>
       <div class='parent' id='mycontainer'>
         <h4 class=''>Experience:</h4>
@@ -76,6 +76,7 @@
 
       </div>
     </section>
+    <!-- Skills -->
     <section id='skills'>
       <div class='skillscontainer parent' id='mycontainer'>
         <h4 class=''>Skills:</h4>
@@ -87,66 +88,67 @@
               <td>
                 <i class="fab fa-react fa-3x" style='color:5ed2f3'></i>
                 <br>
-                  reactjs
-                </td>
-                <td>
-                  <i class="fab fa-js-square fa-3x" style='color:efd81d'></i>
-                  <br>
-                  Javascript
-                </td>
-                <td>
-                  <i class="fab fa-python fa-3x" style='color:356c9b'></i>
-                  <br>
-                  Python
-                </td>
-              </tr>
-              <!-- row 2 -->
-              <tr>
-                <td>
-                  <i class="fab fa-html5 fa-3x" style='color:e96228'></i>
-                  <br>
-                  HTML5
-                </td>
-                <td>
-                  <i class="fab fa-css3 fa-3x" style='color:264bdd'></i>
-                  <br>
-                  CSS3
-                </td>
-                <td>
-                  <i class="fab fa-git fa-3x" style='color:tomato'></i>
-                  <br>
-                  Git
-                </td>
-              </tr>
-              <!-- row 3 -->
-              <tr>
-                <td>
-                  <i class="fab fa-node-js fa-3x" style='color:7fbc02;'></i>
-                  <br>
-                  Node
-                </td>
-                <td>
-                  <i class="fas fa-gem fa-3x" style='color:#c60000;'></i>
-                  <br>
-                  Ruby
-                </td>
-                <td>
-                  <i class="fas fa-road fa-3x" style='color:#8e0d15;'></i>
-                  <br>
-                  Rails
-                </td>
-              </tr>
-            </tbody>
-          </table>
-      <div class='child' id='bottomarrow'>
-        <a href='#projects'>
-          <i class="fas fa-arrow-circle-down fa-2x"></i>
-        </a>
-      </div>
+                reactjs
+              </td>
+              <td>
+                <i class="fab fa-js-square fa-3x" style='color:efd81d'></i>
+                <br>
+                Javascript
+              </td>
+              <td>
+                <i class="fab fa-python fa-3x" style='color:356c9b'></i>
+                <br>
+                Python
+              </td>
+            </tr>
+            <!-- row 2 -->
+            <tr>
+              <td>
+                <i class="fab fa-html5 fa-3x" style='color:e96228'></i>
+                <br>
+                HTML5
+              </td>
+              <td>
+                <i class="fab fa-css3 fa-3x" style='color:264bdd'></i>
+                <br>
+                CSS3
+              </td>
+              <td>
+                <i class="fab fa-git fa-3x" style='color:tomato'></i>
+                <br>
+                Git
+              </td>
+            </tr>
+            <!-- row 3 -->
+            <tr>
+              <td>
+                <i class="fab fa-node-js fa-3x" style='color:7fbc02;'></i>
+                <br>
+                Node
+              </td>
+              <td>
+                <i class="fas fa-gem fa-3x" style='color:#c60000;'></i>
+                <br>
+                Ruby
+              </td>
+              <td>
+                <i class="fas fa-road fa-3x" style='color:#8e0d15;'></i>
+                <br>
+                Rails
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class='child' id='bottomarrow'>
+          <a href='#projects'>
+            <i class="fas fa-arrow-circle-down fa-2x"></i>
+          </a>
+        </div>
       </div>
     </section>
+    <!-- Projects -->
     <section id='projects'>
-      <div class='parent' id='mycontainer'>
+      <div class='parent projectscontainer' id='mycontainer'>
         <h4 class=''>Projects:</h4>
         <br>
         <p>
@@ -169,14 +171,14 @@
           </a>
           <br><br>
         </p>
-      <div class='child lastchild' id='bottomarrowlast' >
-        <a href='#about' >
-          <i class="fas fa-arrow-circle-up fa-2x"></i>
-        </a>
-      </div>
+        <div class='child lastchild' id='bottomarrowlast'>
+          <a href='#about'>
+            <i class="fas fa-arrow-circle-up fa-2x"></i>
+          </a>
+        </div>
       </div>
     </section>
-    <footer >
+    <footer>
       © Andrew Njoo (2021)
     </footer>
   </div>
@@ -186,7 +188,7 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     var options = {
-      strings: ['<i>Hello, ^1000 my name is Andrew</i>.', "I'm a web developer." ],
+      strings: ['<i>Hello, ^1000 my name is Andrew</i>.', "I'm a web developer."],
       typeSpeed: 60,
       backSpeed: 40,
       // showCursor: false
