--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
   <title>adnjoo</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+
   <!-- Custom styles -->
   <link rel='stylesheet' href='styles.css'>
   <!-- Fontawesome -->
@@ -13,37 +14,32 @@
 
 </head>
 
-<body>
-  <!-- Sidebar -->
-  <section id='sidebar'>
-    <div class='inner navbar'>
-      <nav>
-        adnjoo<br><br><br>
-        <a href="#about">About</a>
-        <a href="#experience">Experience</a>
-        <a href="#skills">Skills</a><br>
-        <a href="#projects">Projects</a><br>
-        <br><br>
-        <a href='https://twitter.com/adnjoo' target="_blank">
-          <i class="fab fa-twitter fa-lg"></i>
-        </a>
-        <a href='https://github.com/adnjoo' target="_blank">
-          <i class="fab fa-github fa-lg"></i>
-        </a>
-        <a href='https://www.linkedin.com/in/adnjoo' target="_blank">
-          <i class="fab fa-linkedin fa-lg"></i>
-        </a>
-      </nav>
-      <div>
-      </div>
-    </div>
+<body data-bs-spy="scroll">
+  <nav id="navbar-example2" class="navbar navbar-light bg-dark px-3 fixed-top">
+    <ul class="nav nav-pills justify-content-center mx-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#experience">Experience</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#skills">Skills</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#projects">Projects</a>
+      </li>
+    </ul>
+  </nav>
 
-  </section>
   <!-- Wrapper -->
-  <div id='wrapper'>
+  <div class='scroll-container scrollspy-example' id='wrapper'
+   data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0"
+  style='position:relative'
+  >
 
-    <!-- Intro -->
-    <section id='about'>
+    <!-- About -->
+    <section class='section scrollspy' id='about'>
       <div class='parent' id='mycontainer'>
         <h2>Andrew Njoo</h2>
         <div id='typedcontainer'>
@@ -60,7 +56,7 @@
       </div>
     </section>
     <!-- Experience -->
-    <section id='experience'>
+    <section class='section scrollspy' id='experience'>
       <div class='parent' id='mycontainer'>
         <h4 class=''>Experience:</h4>
         <br>
@@ -77,7 +73,7 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id='skills'>
+    <section class='section scrollspy' id='skills'>
       <div class='skillscontainer parent' id='mycontainer'>
         <h4 class=''>Skills:</h4>
         <br>
@@ -147,7 +143,7 @@
       </div>
     </section>
     <!-- Projects -->
-    <section id='projects'>
+    <section class='section scrollspy' id='projects'>
       <div class='parent projectscontainer' id='mycontainer'>
         <h4 class=''>Projects:</h4>
         <br>
@@ -196,6 +192,13 @@
 
     var typed = new Typed('.element', options);
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    var scrollSpy = new bootstrap.ScrollSpy(document.body, {
+  target: '#navbar-example2'
+})
+
+</script>
 </body>
 
 </html>
