--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,11 @@
 </head>
 
 <body data-bs-spy="scroll">
-  <nav id="navbar-example2" class="navbar navbar-light bg-dark px-3 fixed-top">
-    <ul class="nav nav-pills justify-content-center mx-auto">
+  <nav id="navbar" class="navbar navbar-light bg-dark px-3 fixed-top">
+    <ul class="nav nav-pills flex-column
+    ">
+    <!-- justify-content-center mx-auto for-horizontal-navbar-->
+
       <li class="nav-item">
         <a class="nav-link" href="#about">About</a>
       </li>
@@ -34,12 +37,12 @@
 
   <!-- Wrapper -->
   <div class='scroll-container scrollspy-example' id='wrapper'
-   data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0"
+   data-bs-target="#navbar" data-bs-offset="0" tabindex="0"
   style='position:relative'
   >
 
     <!-- About -->
-    <section class='section scrollspy' id='about'>
+    <section class='' id='about'>
       <div class='parent' id='mycontainer'>
         <h2>Andrew Njoo</h2>
         <div id='typedcontainer'>
@@ -56,7 +59,7 @@
       </div>
     </section>
     <!-- Experience -->
-    <section class='section scrollspy' id='experience'>
+    <section class='' id='experience'>
       <div class='parent' id='mycontainer'>
         <h4 class=''>Experience:</h4>
         <br>
@@ -73,7 +76,7 @@
       </div>
     </section>
     <!-- Skills -->
-    <section class='section scrollspy' id='skills'>
+    <section class='' id='skills'>
       <div class='skillscontainer parent' id='mycontainer'>
         <h4 class=''>Skills:</h4>
         <br>
@@ -143,8 +146,8 @@
       </div>
     </section>
     <!-- Projects -->
-    <section class='section scrollspy' id='projects'>
-      <div class='parent projectscontainer' id='mycontainer'>
+    <section class='' id='projects'>
+      <div class='parent' id='mycontainer'>
         <h4 class=''>Projects:</h4>
         <br>
         <p>
