--- a/index2.html
+++ b/index2.html
@@ -16,10 +16,7 @@
 
 <body data-bs-spy="scroll">
   <nav id="navbar" class="navbar navbar-light bg-dark px-3 fixed-top">
-    <ul class="nav nav-pills flex-column
-    ">
-    <!-- justify-content-center mx-auto for-horizontal-navbar-->
-
+    <ul class="nav nav-pills flex-column">
       <li class="nav-item">
         <a class="nav-link" href="#about">About</a>
       </li>
@@ -31,6 +28,11 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#projects">Projects</a>
+      </li>
+      <li class="nav-item list-inline-item">
+        <a class="nav-link" href="http://github.com/adnjoo"><i class="fab fa-github"></i></a>
+        <a class="nav-link" href="https://twitter.com/adnjoo"><i class="fab fa-twitter"></i></a>
+        <a class="nav-link" href="https://linkedin.com/in/adnjoo"><i class="fab fa-linkedin"></i></a>
       </li>
     </ul>
   </nav>
@@ -196,10 +198,7 @@
     var typed = new Typed('.element', options);
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    var scrollSpy = new bootstrap.ScrollSpy(document.body, {
-  target: '#navbar-example2'
-})
+
 
 </script>
 </body>
