--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 </head>
 
 <body data-bs-spy="scroll">
-  <nav id="navbar" class="navbar navbar-light bg-dark px-3 fixed-top">
+  <nav id="navbar" class="navbar navbar-light bg-dark px-3">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
         <a class="nav-link" href="#about">About</a>
@@ -30,21 +30,17 @@
         <a class="nav-link" href="#projects">Projects</a>
       </li>
       <li class="nav-item list-inline-item">
-        <a class="nav-link" href="http://github.com/adnjoo"><i class="fab fa-github"></i></a>
-        <a class="nav-link" href="https://twitter.com/adnjoo"><i class="fab fa-twitter"></i></a>
-        <a class="nav-link" href="https://linkedin.com/in/adnjoo"><i class="fab fa-linkedin"></i></a>
+        <a class="nav-link" href="http://github.com/adnjoo" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="nav-link" href="https://twitter.com/adnjoo" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="nav-link" href="https://linkedin.com/in/adnjoo" target="_blank"><i class="fab fa-linkedin"></i></a>
       </li>
     </ul>
   </nav>
 
   <!-- Wrapper -->
-  <div class='scroll-container scrollspy-example' id='wrapper'
-   data-bs-target="#navbar" data-bs-offset="0" tabindex="0"
-  style='position:relative'
-  >
-
+  <div id='wrapper'>
     <!-- About -->
-    <section class='' id='about'>
+    <section id='about'>
       <div class='parent' id='mycontainer'>
         <h2>Andrew Njoo</h2>
         <div id='typedcontainer'>
@@ -61,9 +57,9 @@
       </div>
     </section>
     <!-- Experience -->
-    <section class='' id='experience'>
+    <section id='experience'>
       <div class='parent' id='mycontainer'>
-        <h4 class=''>Experience:</h4>
+        <h4 >Experience:</h4>
         <br>
         <p class='experiencetext'>
           I've always been interested in technology.<br><br>
@@ -74,13 +70,12 @@
             <i class="fas fa-arrow-circle-down fa-2x"></i>
           </a>
         </div>
-
       </div>
     </section>
     <!-- Skills -->
-    <section class='' id='skills'>
+    <section id='skills'>
       <div class='skillscontainer parent' id='mycontainer'>
-        <h4 class=''>Skills:</h4>
+        <h4 >Skills:</h4>
         <br>
         <table class='table table-borderless mytable'>
           <tbody>
@@ -148,9 +143,9 @@
       </div>
     </section>
     <!-- Projects -->
-    <section class='' id='projects'>
+    <section id='projects'>
       <div class='parent' id='mycontainer'>
-        <h4 class=''>Projects:</h4>
+        <h4>Projects:</h4>
         <br>
         <p>
           <a href='https://adnjoo.github.io/movie-app/' target="_blank">
@@ -194,13 +189,8 @@
       backSpeed: 40,
       // showCursor: false
     };
-
     var typed = new Typed('.element', options);
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-
-</script>
 </body>
 
 </html>
