--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,10 @@
 </head>
 
 <body data-bs-spy="scroll">
-  <nav id="navbar" class="navbar navbar-light bg-dark px-3">
+  <nav id="navbar" class="navbar navbar-light bg-dark px-3
+
+  ">
+
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
         <a class="nav-link" href="#about">About</a>
