--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
         <br>
         <img src='https://raw.githubusercontent.com/adnjoo/portfolio-website/main/portfolio-website-2021-v1/pic.jpeg'
           class='profilepic'>
-        <div class='child' id='bottomarrow'>
+        <div class='child bounce' id='bottomarrow'>
           <a href='#experience'>
             <i class="fas fa-arrow-circle-down fa-2x"></i>
           </a>
@@ -68,7 +68,7 @@
           I've always been interested in technology.<br><br>
           In 2021 I decided to pursue the DevMtn bootcamp to boost my skills in web development.
         </p>
-        <div class='child' id='bottomarrow'>
+        <div class='child bounce' id='bottomarrow'>
           <a href='#skills'>
             <i class="fas fa-arrow-circle-down fa-2x"></i>
           </a>
@@ -138,7 +138,7 @@
             </tr>
           </tbody>
         </table>
-        <div class='child' id='bottomarrow'>
+        <div class='child bounce' id='bottomarrow'>
           <a href='#projects'>
             <i class="fas fa-arrow-circle-down fa-2x"></i>
           </a>
@@ -170,7 +170,7 @@
           </a>
           <br><br>
         </p>
-        <div class='child lastchild' id='bottomarrowlast'>
+        <div class='child bounce lastchild' id='bottomarrowlast'>
           <a href='#about'>
             <i class="fas fa-arrow-circle-up fa-2x"></i>
           </a>
