--- a/index2.html
+++ b/index2.html
@@ -187,9 +187,10 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     var options = {
-      strings: ['<i>Hello, ^1000 my name is Andrew</i>.', "I'm a web developer."],
+      strings: ['<i>Hello, ^1000 my name is Andrew</i>.', "I'm a web developer.^3000"],
       typeSpeed: 60,
       backSpeed: 40,
+      loop:true
       // showCursor: false
     };
     var typed = new Typed('.element', options);
