--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,12 @@
     </a>
   </div>
   <!-- navbar -->
-  <nav id="navbar" class="navbar navbar-light bg-dark px-3">
+  <nav id="navbar" class="navbar navbar-light bg-dark px-3"
+  style='align-items: flex-start;'>
+
+    <a href="#" class="text-light navbar-brand"
+    style='display:block; padding: .5rem 1rem;margin-top:30px'
+    >adnjoo</a>
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
         <a class="nav-link" href="#about">About</a>
@@ -48,10 +53,16 @@
       <li class="nav-item">
         <a class="nav-link" href="#projects">Projects</a>
       </li>
-      <li class="nav-item list-inline-item">
-        <a class="nav-link" href="http://github.com/adnjoo" target="_blank"><i class="fab fa-github"></i></a>
-        <a class="nav-link" href="https://twitter.com/adnjoo" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a class="nav-link" href="https://linkedin.com/in/adnjoo" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <li class="nav-item list-inline-item" style='margin-top:20px'>
+        <a class="nav-link" href="http://github.com/adnjoo"
+        style='display:inline;padding: 0.5rem 0 0.5rem 1rem;'
+        target="_blank"><i class="fab fa-github"></i></a>
+        <a class="nav-link" href="https://twitter.com/adnjoo"
+        style='display:inline;padding: 0.5rem 0rem'
+        target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="nav-link" href="https://linkedin.com/in/adnjoo"
+        style='display:inline;padding: 0.5rem 0rem'
+        target="_blank"><i class="fab fa-linkedin"></i></a>
       </li>
     </ul>
   </nav>
