--- a/index2.html
+++ b/index2.html
@@ -20,13 +20,13 @@
     <a href="#" class="active">adnjoo</a>
     <!-- Navigation links (hidden by default) -->
     <div id="myLinks">
-      <a href="#about">About</a>
-      <a href="#experience">Experience</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a class="nav-link" href="http://github.com/adnjoo" target="_blank"><i class="fab fa-github"></i></a>
-        <a class="nav-link" href="https://twitter.com/adnjoo" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a class="nav-link" href="https://linkedin.com/in/adnjoo" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a class='mobilemenu' href="#about">About</a>
+      <a class='mobilemenu' href="#experience">Experience</a>
+      <a class='mobilemenu' href="#skills">Skills</a>
+      <a class='mobilemenu' href="#projects">Projects</a>
+      <a class="nav-link mobilemenu" href="http://github.com/adnjoo" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="nav-link mobilemenu" href="https://twitter.com/adnjoo" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="nav-link mobilemenu" href="https://linkedin.com/in/adnjoo" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -225,15 +225,23 @@
 
 
 
-    /* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+/* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+var x = document.getElementById("myLinks");
 function myFunction() {
-  var x = document.getElementById("myLinks");
   if (x.style.display === "block") {
     x.style.display = "none";
   } else {
     x.style.display = "block";
   }
 }
+
+const navLinks = document.querySelectorAll('.mobilemenu')
+navLinks.forEach((l) => {
+  l.addEventListener('click',()=>{
+    console.log('test')
+    x.style.display='none'
+  })
+})
   </script>
 </body>
 
