--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 
 /* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
-var x = document.getElementById("myLinks");
+let x = document.getElementById("myLinks");
 function myFunction() {
   if (x.style.display === "block") {
     x.style.display = "none";
